// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reminder not passed in renders correctly 1`] = `
<withI18nextTranslation(MyDatePickerIOS)
  customStyles={Object {}}
  date=""
  disabled={false}
  duration={300}
  height={378}
  iOSModalContent={
    <withI18nextTranslation(ReminderRepeatButtons)
      onRecurrenceChange={[Function]}
    />
  }
  minDate={2018-09-12T12:00:00.000Z}
  mode="datetime"
  onDateChange={[Function]}
  onPressAndroid={[Function]}
  onPressIOS={[Function]}
/>
`;

exports[`reminder passed in renders correctly 1`] = `
<withI18nextTranslation(MyDatePickerIOS)
  customStyles={Object {}}
  date="2018-09-12 12:00:00 PM GMT+0"
  disabled={false}
  duration={300}
  height={378}
  iOSModalContent={
    <withI18nextTranslation(ReminderRepeatButtons)
      onRecurrenceChange={[Function]}
    />
  }
  minDate={2018-09-12T12:00:00.000Z}
  mode="datetime"
  onDateChange={[Function]}
  onPressAndroid={[Function]}
  onPressIOS={[Function]}
/>
`;
